# Similar-Hash-Finder

./: .gitignore  CMakeLists.txt  README.md  Similar Hash Finder.sln
Algorithms/: Algorithms.cpp  Algorithms.vcxproj  Algorithms.vcxproj.filters  CMakeLists.txt  base.hpp  main.cpp  sha256.h  tools.h
Client/: CMakeLists.txt  Client.vcxproj  main.cpp  request.cpp  request.hpp  window.cpp  window.h
Sample-Test/: CMakeLists.txt  Sample-Test.vcxproj  test.cpp
Similar Hash Finder - Client/: Similar Hash Finder - Client.vcxproj  Similar Hash Finder - Client.vcxproj.filters  main.cpp  window.h
docker/: docker-compose.yml  dockerfile  entrypoint.sh
server/: .dockerignore  CMakeLists.txt  docker-compose.yml  dockercompose.yml  dockerfile  handlers.hpp  main.cpp  mongo.hpp
tests/: test.cpp
